tests/NormalTests/paczka1/fuzzy1/12583396.err
Error in line 2: gfc S886 44,5
Error in line 11: l8M A26 13,36
Error in line 9: uNnGRC5 S886 312,1
Error in line 20: l8M A26 51,8
Error in line 32: mEaae2g A399 14,2
Error in line 33: uNnGRC5 A26 57,4
